JPA validation error handler not working as expected (not calling the correct funciton when there should be an error) --> Video 117